--- a/pages/math.html
+++ b/pages/math.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Math
-subtitle: "Về Giải tích, Đại số và Xác suất Thống kê"
+subtitle: "Algebra, Calculus, Probability and Statistic"
 permalink: /math/
 feature-img: "assets/img/pexels/search-map.jpeg"
 ---
